# ckanext-fuseki

./: .gitignore  CITATION.cff  MANIFEST.in  PROXY_IMPLEMENTATION.md  README.md  SECURITY.md  VERSIONING.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: pypi.yml  python-publish.yml  test.yml
ckanext/fuseki/: backend.py  db.py  helpers.py  plugin.py  tasks.py  views.py
ckanext/fuseki/assets/: fuseki.js
ckanext/fuseki/i18n/: ckanext-fuseki.pot
ckanext/fuseki/i18n/de/LC_MESSAGES/: ckanext-fuseki.mo  ckanext-fuseki.po
ckanext/fuseki/logic/: action.py  auth.py
ckanext/fuseki/templates/fuseki/: logs.html  query.html  status.html
ckanext/fuseki/templates/package/: read_base.html
ckanext/fuseki/templates/package/snippets/: resource_item.html
optional/: README.md  docker-compose.yml
optional/fuseki/: shiro.ini
