[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-fuseki"
dynamic = ["version"]
description = "An extension for storing file with Apache Jena"
readme = "README.md"
authors = [
    {name = "Thomas Hanke", email = "thomas.hanke@iwm.fraunhofer.de"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["CKAN"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Mat-O-Lab/ckanext-fuseki"

[project.entry-points."ckan.plugins"]
fuseki = "ckanext.fuseki.plugin:JenaPlugin"

[project.entry-points."paste.paster_command"]
fuseki = "ckanext.fuseki.commands:JenaCommand"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"ckanext.fuseki" = [
    "templates/**/*.html",
    "assets/**/*",
    "public/**/*",
    "i18n/**/*.mo",
    "i18n/**/*.pot",
]

# Babel configuration for i18n
[tool.babel.extract_messages]
keywords = "translate isPlural"
add_comments = "TRANSLATORS:"
output_file = "i18n/ckanext-fuseki.pot"
width = 80

[tool.babel.init_catalog]
domain = "ckanext-fuseki"
input_file = "i18n/ckanext-fuseki.pot"
output_dir = "i18n"

[tool.babel.update_catalog]
domain = "ckanext-fuseki"
input_file = "i18n/ckanext-fuseki.pot"
output_dir = "i18n"
previous = true

[tool.babel.compile_catalog]
domain = "ckanext-fuseki"
directory = "i18n"
statistics = true

# Setuptools-scm configuration for dynamic versioning from git tags
[tool.setuptools_scm]
# Version is automatically derived from git tags
# Use tags like 'v1.0.0', 'v1.1.0', etc.
# Dev versions between tags will be like '1.0.0.dev5+g1234abc'
fallback_version = "0.0.1.dev0"
