[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-fuseki"
dynamic = ["version"]
description = "CKAN extension that pushes RDF resources to Apache Jena Fuseki, with CKAN-authenticated SPARQL proxy and embedded YASGUI query interface"
readme = "README.md"
authors = [
    {name = "Thomas Hanke", email = "thomas.hanke@iwm.fraunhofer.de"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["CKAN", "RDF", "SPARQL", "Fuseki", "Apache Jena", "semantic web", "linked data", "FAIR data"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Mat-O-Lab/ckanext-fuseki"
Repository = "https://github.com/Mat-O-Lab/ckanext-fuseki"

[project.entry-points."ckan.plugins"]
fuseki = "ckanext.fuseki.plugin:JenaPlugin"

[project.entry-points."paste.paster_command"]
fuseki = "ckanext.fuseki.commands:JenaCommand"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"ckanext.fuseki" = [
    "templates/**/*.html",
    "assets/**/*",
    "public/**/*",
    "i18n/**/*.mo",
    "i18n/**/*.pot",
]

# Babel configuration for i18n
[tool.babel.extract_messages]
keywords = "translate isPlural"
add_comments = "TRANSLATORS:"
output_file = "ckanext/fuseki/i18n/ckanext-fuseki.pot"
width = 80

[tool.babel.init_catalog]
domain = "ckanext-fuseki"
input_file = "ckanext/fuseki/i18n/ckanext-fuseki.pot"
output_dir = "ckanext/fuseki/i18n"

[tool.babel.update_catalog]
domain = "ckanext-fuseki"
input_file = "ckanext/fuseki/i18n/ckanext-fuseki.pot"
output_dir = "ckanext/fuseki/i18n"
previous = true

[tool.babel.compile_catalog]
domain = "ckanext-fuseki"
directory = "ckanext/fuseki/i18n"
statistics = true

# Setuptools-scm configuration for dynamic versioning from git tags
[tool.setuptools_scm]
# Version automatically derived from git tags (e.g. v1.0.8 -> 1.0.8)
